ExtractFix_dataset/docker/binutils-gdb/testcases/cve_2017_15025/ubsan.txt
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: unknown type [0x1b03] section `.strtab'
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: invalid string offset 117901063 >= 308 for section `.dynstr'
/dataset/testcases/cve_2017_15025/3899.crashes.bin:001e000000400530 r (null)@@GLIBCXX_3.4binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
binutils/nm-new: /dataset/testcases/cve_2017_15025/3899.crashes.bin: attempt to load strings from a non-string section (number 36)
/dataset/repos/binutils-gdb/bfd/libbfd.c:1023:43: runtime error: shift exponent 70 is too large for 64-bit type 'long unsigned int'
/dataset/repos/binutils-gdb/bfd/dwarf2.c:2442:34: runtime error: division by zero
